# SMARTenergy-forecasting_system

./: .gitignore  AGENTS.md  README.md  dashboard.py  pyproject.toml
data/raw/: dubai_home_energy_hourly.csv
docs/: presentation_outline.md  project_summary.md
src/smart_energy_analytics/: __init__.py  analytics.py  anomaly_detection.py  forecasting.py  preprocessing.py
tests/: test_analytics.py  test_anomaly_detection.py  test_forecasting.py  test_preprocessing.py
