[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-residential-energy-analytics"
version = "0.1.0"
description = "Preprocessing and analytics helpers for Dubai home energy data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3.0",
    "streamlit>=1.36,<2.0",
    "plotly>=5.22,<6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
